<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buddy Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">login</string>

    <!-- Login -->
    <string name="name">User ID</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="title_activity_register">register</string>

    <!-- -Register -->
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
